feat: append kafka producer, cronjob (fetch bank account and update balance)
