# users/proto/openapiv2/users.swagger.json
@@ -417,6 +417,10 @@
       "properties": {
         "success": {
           "type": "boolean"
+        },
+        "balance": {
+          "type": "number",
+          "format": "double"
         }
       }
     },
